# easydonate-api

./: Cargo.toml  README.md  puff.yml
src/: lib.rs
src/result/: mod.rs
src/tests/: mod.rs  product.rs  products.rs  server.rs  servers.rs  shop.rs
src/util/: serde.rs
src/v3/: mod.rs  payment.rs  product.rs  products.rs  server.rs  servers.rs  shop.rs
src/v3/types/: mod.rs  product.rs  server.rs  shop.rs  user.rs
